<resources>
    <string name="app_name">Password Generator And Manager</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for drawer menu items -->
    <string name="generator_title">Password Generator</string>
    <string name="vault">Local Vault</string>
    <string name="backup">Cloud Sync &amp; Local Backup</string>
    <string name="edit_pass">Change Vault Password</string>
    <string name="about">About</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="theme_layout_heading_text">Themes</string>
    <string name="theme_layout_switch_text">Dark Mode</string>
    <string name="drawer_header_text_view">Sign In</string>
    <!-- Strings used for key generator fragment -->
    <string name="generate">Generate</string>
    <string name="add_to_vault">Add to Vault</string>
    <string name="Copy_Pass">Copy Password</string>
    <!-- switch button text -->
    <string name="az">a-z</string>
    <string name="AZ">A-Z</string>
    <string name="text0to9">0-9</string>
    <string name="specialchar">!$*</string>
    <!-- strings used for vault fragment -->
    <string name="create_vault">Create new Vault</string>
    <string name="open_vault">Open Vault</string>
    <string name="close_vault">Close Vault</string>
    <string name="delete_vault">Delete Vault</string>
    <!-- Create new vault dialog box strings -->
    <string name="CreateNewVault">Create New Vault...</string>
    <string name="EnterVaultName">Enter Vault Name(A-Z,a-z,0-9,-,_,space)</string>
    <string name="EnterPass">Enter Password</string>
    <string name="ConfirmPass">Confirm Password</string>
    <string name="vault_not_opened_status">Open a vault to display its data.</string>
    <string name="empty_vault_status">No password data in the vault.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <!-- strings used for card view layout -->
    <string name="AccountType">Account Type-</string>
    <string name="AccountID">Account ID-</string>
    <string name="Password">Password-</string>
    <string name="Dateofmodification">Date of modification-</string>
    <string name="CopyID">Copy ID</string>
    <string name="CopyPassword">Copy Password</string>
    <string name="deletedata">Delete Data</string>
    <!-- strings for enter_new_pass_dialog -->
    <string name="enter_new_password">Add New Password</string>
    <string name="account_id">Enter Account ID</string>
    <string name="account_type">Enter Account Type</string>
    <!-- Strings for Sync fragment -->
    <string name="Online_Backup">Online Backup</string>
    <string name="Offline_Backup">Offline Backup</string>
    <string name="Perform_Local_Backup">Perform Local Backup</string>
    <string name="Load_Backup_File">Load Backup File</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="sync_button_text">Sync Now</string>
    <string name="syncing">Syncing…</string>
    <string name="AutoSync">Auto Sync</string>
    <string name="sign_in_button_text">Sign In with Google</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="not_signed_in">Not signed in.</string>
    <!-- Strings for file_explorer_activity -->
    <string name="title_activity_file__explorer_">File_Explorer_Activity</string>
    <string name="Load_Vault_File">Load Vault</string>
    <string name="Backup_Vaults">Backup Vaults</string>
    <string name="back_button">Back Button</string>
    <string name="new_folder">New Folder</string>
    <!-- Strings for about dialog -->
    <string name="github_link">https://github.com/YuvrajTalukdar/Password-Generator-And-Manager</string>
    <string name="about_description">For more information and also help the project: <a href="https://github.com/YuvrajTalukdar/Password-Generator-And-Manager">https://github.com/YuvrajTalukdar/Password-Generator-And-Manager</a>  \n\nPassword Generator and Manager is a Free as in Freedom software for managing and generating your passwords for Android 6.0+.\n\nPassword Generator and Manager is released under the terms of GNU General Public License v3 (GPLv3): <a href="http://www.gnu.org/licenses/gpl-3.0.html">http://www.gnu.org/licenses/gpl-3.0.html</a>\n\nIcons by Icons8: <a href="https://icons8.com"> https://icons8.com </a></string>
    <string name="version_1_0">Version 1.0</string>
    <string name="password_generator_and_manager">Password Generator and Manager</string>
    <!--change pass dialog strings-->
    <string name="change_pass_dialog_title">Change Vault Password</string>
    <string name="current_pass_hint">Enter Current Passowrd</string>
    <string name="new_pass1_hint">Enter New Password</string>
    <string name="new_pass2_hint">Confirm New Password</string>

</resources>