<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/ItemBackgroundColor2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:background="?attr/ItemBackgroundColor2">

        <TextView
            android:id="@+id/about_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="?attr/MediumColor"
            android:layout_marginTop="20dp"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="?attr/ItemBackgroundColor2">
        <ImageView
            android:id="@+id/appIconImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"/>
        <TextView
            android:id="@+id/about_under_icon_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_generator_and_manager"
            android:gravity="center"
            android:textColor="?attr/MediumColor"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/about_version_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_1_0"
            android:gravity="center"
            android:textColor="?attr/InverseBackgroundColor"
            android:layout_marginTop="10dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/description_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_description"
            android:padding="10dp"
            android:textColor="?attr/DeepColor"
            android:layout_marginTop="20dp"
            android:autoLink="web"
            android:textSize="15sp" />

        <Button
            android:id="@+id/about_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/generate_pass_button_style"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ok" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>