<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/ItemBackgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/backgroundColor">

        <TextView
            android:id="@+id/change_pass_dialog_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_pass_dialog_title"
            android:textColor="?attr/LightColor"
            android:layout_marginTop="20dp"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Spinner
            android:id="@+id/change_pass_dialog_vault_spinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:backgroundTint="?attr/MediumColor"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/current_pass_edittext_change_pass_dialog"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/LightColor"
            android:gravity="start"
            android:hint="@string/current_pass_hint"
            android:inputType="textPassword"
            android:textAlignment="gravity"
            android:textColor="?attr/MediumColor"
            android:textColorHint="?attr/DeepColor" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_pass_edittext1_change_pass_dialog"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/LightColor"
            android:gravity="start"
            android:hint="@string/new_pass1_hint"
            android:inputType="textPassword"
            android:textAlignment="gravity"
            android:textColor="?attr/MediumColor"
            android:textColorHint="?attr/DeepColor" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_pass_edittext2_change_pass_dialog"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/LightColor"
            android:gravity="start"
            android:hint="@string/new_pass2_hint"
            android:inputType="textPassword"
            android:textAlignment="gravity"
            android:textColor="?attr/MediumColor"
            android:textColorHint="?attr/DeepColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Black"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok_change_pass_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="?attr/MediumColor"
            android:background="@drawable/blackripple"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel_change_pass_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="?attr/MediumColor"
            android:background="@drawable/blackripple"
            android:text="@string/cancel" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>