<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/ItemBackgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/backgroundColor">

        <TextView
            android:id="@+id/delete_vault_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_folder"
            android:textColor="?attr/LightColor"
            android:layout_marginTop="20dp"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/new_folder_dialog_edit_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:backgroundTint="?attr/LightColor"
            android:gravity="start"
            android:hint="@string/new_folder"
            android:textAlignment="gravity"
            android:textColor="?attr/MediumColor"
            android:textColorHint="?attr/DeepColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Black"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_folder_dialog_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="?attr/MediumColor"
            android:background="@drawable/blackripple"
            android:text="@string/ok" />

        <Button
            android:id="@+id/new_folder_dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="?attr/MediumColor"
            android:background="@drawable/blackripple"
            android:text="@string/cancel" />
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>